# fast-api-start-template

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: container.py  main.py
app/application/dto/: message_dto.py
app/application/use_cases/: get_message.py
app/domain/entities/: message.py
app/domain/repositories/: message_repository.py
app/infrastructure/database/: connection.py
app/infrastructure/redis/: client.py
app/infrastructure/repositories/: static_message_repository.py
app/infrastructure/settings/: app.py  base.py  database.py  redis.py
app/presentation/api/dependencies/: container.py
app/presentation/api/v1/: health.py  messages.py  router.py
app/presentation/schemas/: health.py  message.py
docker/: entrypoint.sh
tests/presentation/: test_health.py  test_message.py
